--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-xts
-url = https://cran.r-project.org/src/contrib/xts_0.12-0.tar.gz
+url = https://cran.r-project.org/src/contrib/xts_0.12.1.tar.gz
 archives = 
 giturl = https://github.com/joshuaulrich/xts.git
 domain = 
