--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-xts
-url = https://cran.r-project.org/src/contrib/xts_0.13.2.tar.gz
+url = https://cran.r-project.org/src/contrib/xts_0.14.0.tar.gz
 archives = 
 giturl = https://github.com/joshuaulrich/xts.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = true
 use_clang = false
 # configure build for lto
 use_lto = false
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
